# notification_challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-test.yml  pyproject.toml  run_test.sh
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-env.yml  init-dev.sh
alembic/: env.py
alembic/versions/: b7fed8c86cf7_init.py
app/: main.py
app/channels/: __init__.py  email.py  protocols.py  push.py  sms.py
app/core/: config.py  database.py  exception_handler.py  exceptions.py
app/dependencies/: auth.py  session.py
app/models/: notifications.py  users.py
app/repositories/: notifications.py  protocols.py  users.py
app/routers/v1/: __init__.py  auth.py  notifications.py  users.py
app/schemas/: auth.py  notifications.py  users.py
app/services/: auth.py  notifications.py  protocols.py  users.py
app/swagger/: notification_examples.py  user_examples.py
app/utils/: constants.py  functions.py
app/utils/mappers/: notifications.py  users.py
docs/: SIMULACRO ENTREVISTA.MD  specs-auth.md  specs-channels.md  specs-notifications.md
tests/: conftest.py
tests/channels/: test_email_channel.py  test_push_channel.py  test_sms_channel.py
tests/routers/: test_auth.py  test_notifications.py  test_users.py
tests/services/: test_auth_service.py  test_notification_service.py  test_user_service.py
