[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.136.1)",
    "alembic (==1.18.4)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "bcrypt (==4.0.1)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlmodel (>=0.0.38,<0.0.39)"
]


[tool.poetry.group.dev.dependencies]
pre-commit = "==4.6.0"
pytest = ">=9.0.3,<10.0.0"
httpx = ">=0.28.1,<0.29.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.1.0,<8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=app --cov-report html"